@@ -25,6 +25,8 @@
 #include <cmath>
 
 #include <QApplication>
+#include <QLocale>
+#include <QStringList>
 
 #if LIBUSB_VERSION == 0
 #include <usb.h>
@@ -74,7 +76,7 @@ namespace Helper {
 		}
 	}
 	
-	/// \brief Converts double to string containing value and (prefix+)unit.
+	/// \brief Converts double to string containing value and (prefix+)unit (Counterpart to Helper::stringToValue).
 	/// \param value The value in prefixless units.
 	/// \param unit The unit for the value.
 	/// \param precision Significant digits, 0 for integer, -1 for auto.
@@ -87,9 +89,9 @@ namespace Helper {
 				// Voltage string representation
 				int logarithm = floor(log10(fabs(value)));
 				if(value < 1e-3)
-					return QApplication::tr("%L1 \265V").arg(value * 1e6, 0, format, (precision <= 0) ? precision : qBound(0, precision - 7 - logarithm, precision));
+					return QApplication::tr("%L1 \265V").arg(value / 1e-6, 0, format, (precision <= 0) ? precision : qBound(0, precision - 7 - logarithm, precision));
 				else if(value < 1.0)
-					return QApplication::tr("%L1 mV").arg(value * 1e3, 0, format, (precision <= 0) ? precision : (precision - 4 - logarithm));
+					return QApplication::tr("%L1 mV").arg(value / 1e-3, 0, format, (precision <= 0) ? precision : (precision - 4 - logarithm));
 				else
 					return QApplication::tr("%L1 V").arg(value, 0, format, (precision <= 0) ? precision : qMax(0, precision - 1 - logarithm));
 			}
@@ -100,13 +102,13 @@ namespace Helper {
 			case UNIT_SECONDS:
 				// Time string representation
 				if(value < 1e-9)
-					return QApplication::tr("%L1 ps").arg(value * 1e12, 0, format, (precision <= 0) ? precision : qBound(0, precision - 13 - (int) floor(log10(fabs(value))), precision));
+					return QApplication::tr("%L1 ps").arg(value / 1e-12, 0, format, (precision <= 0) ? precision : qBound(0, precision - 13 - (int) floor(log10(fabs(value))), precision));
 				else if(value < 1e-6)
-					return QApplication::tr("%L1 ns").arg(value * 1e9, 0, format, (precision <= 0) ? precision : (precision - 10 - (int) floor(log10(fabs(value)))));
+					return QApplication::tr("%L1 ns").arg(value / 1e-9, 0, format, (precision <= 0) ? precision : (precision - 10 - (int) floor(log10(fabs(value)))));
 				else if(value < 1e-3)
-					return QApplication::tr("%L1 \265s").arg(value * 1e6, 0, format, (precision <= 0) ? precision : (precision - 7 - (int) floor(log10(fabs(value)))));
+					return QApplication::tr("%L1 \265s").arg(value / 1e-6, 0, format, (precision <= 0) ? precision : (precision - 7 - (int) floor(log10(fabs(value)))));
 				else if(value < 1.0)
-					return QApplication::tr("%L1 ms").arg(value * 1e3, 0, format, (precision <= 0) ? precision : (precision - 4 - (int) floor(log10(fabs(value)))));
+					return QApplication::tr("%L1 ms").arg(value / 1e-3, 0, format, (precision <= 0) ? precision : (precision - 4 - (int) floor(log10(fabs(value)))));
 				else if(value < 60)
 					return QApplication::tr("%L1 s").arg(value, 0, format, (precision <= 0) ? precision : (precision - 1 - (int) floor(log10(fabs(value)))));
 				else if(value < 3600)
@@ -140,6 +142,116 @@ namespace Helper {
 			}
 			default:
 				return QString();
+		}
+	}
+	
+	/// \brief Converts string containing value and (prefix+)unit to double (Counterpart to Helper::valueToString).
+	/// \param text The text containing the value and its unit.
+	/// \param unit The base unit of the value.
+	/// \param ok Pointer to a success-flag, true on success, false on error.
+	/// \return Decoded value.
+	double stringToValue(const QString &text, Unit unit, bool *ok) {
+		// Check if the text is empty
+		int totalSize = text.size();
+		if(!totalSize){
+			if(ok)
+				*ok = false;
+			return 0.0;
+		}
+		
+		// Split value and unit apart
+		int valueSize = 0;
+		QLocale locale;
+		bool decimalFound = false;
+		bool exponentFound = false;
+		if(text[valueSize] == locale.negativeSign())
+			++valueSize;
+		for(; valueSize < text.size(); ++valueSize) {
+			QChar character = text[valueSize];
+			
+			if(character.isDigit()) {
+			}
+			else if(character == locale.decimalPoint() && decimalFound == false && exponentFound == false) {
+				decimalFound = true;
+			}
+			else if(character == locale.exponential() && exponentFound == false) {
+				exponentFound = true;
+				if(text[valueSize + 1] == locale.negativeSign())
+					++valueSize;
+			}
+			else {
+				break;
+			}
+		}
+		QString valueString = text.left(valueSize);
+		bool valueOk = false;
+		double value = valueString.toDouble(&valueOk);
+		if(!valueOk) {
+			if(ok)
+				*ok = false;
+			return value;
+		}
+		QString unitString = text.right(text.size() - valueSize).trimmed();
+		
+		if(ok)
+			*ok = true;
+		switch(unit) {
+			case UNIT_VOLTS: {
+				// Voltage string decoding
+				if(unitString.startsWith('\265'))
+					return value * 1e-6;
+				else if(unitString.startsWith('m'))
+					return value * 1e-3;
+				else
+					return value;
+			}
+			case UNIT_DECIBEL:
+				// Power level string decoding
+				return value;
+			
+			case UNIT_SECONDS:
+				// Time string decoding
+				if(unitString.startsWith('p'))
+					return value * 1e-12;
+				else if(unitString.startsWith('n'))
+					return value * 1e-9;
+				else if(unitString.startsWith('\265'))
+					return value * 1e-6;
+				else if(unitString.startsWith("min"))
+					return value * 60;
+				else if(unitString.startsWith('m'))
+					return value * 1e-3;
+				else if(unitString.startsWith('h'))
+					return value * 3600;
+				else
+					return value;
+			
+			case UNIT_HERTZ:
+				// Frequency string decoding
+				if(unitString.startsWith('k'))
+					return value * 1e3;
+				else if(unitString.startsWith('M'))
+					return value * 1e6;
+				else if(unitString.startsWith('G'))
+					return value * 1e9;
+				else
+					return value;
+			
+			case UNIT_SAMPLES:
+				// Sample count string decoding
+				if(unitString.startsWith('k'))
+					return value * 1e3;
+				else if(unitString.startsWith('M'))
+					return value * 1e6;
+				else if(unitString.startsWith('G'))
+					return value * 1e9;
+				else
+					return value;
+			
+			default:
+				if(ok)
+					*ok = false;
+				return value;
 		}
 	}
 	
